Import of AKALINUX/Data-Range-Compare-1.028 from CPAN.
gitpan-cpan-distribution: Data-Range-Compare
gitpan-cpan-version:      1.028
gitpan-cpan-path:         AKALINUX/Data-Range-Compare-1.028.tar.gz
gitpan-cpan-author:       AKALINUX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:                Data-Range-Compare
-version:             1.027
-abstract:            Framework for calculating range intersections
+version:             1.028
+abstract:            Find gaps and intersections in ranges
 license:             ~
 author:              
     - Michael Shipper <AKALINUX@cpan.org>
